# SVD-baselines

./: .gitignore  pyproject.toml
CC_WEB_VIDEO_Downloader/: download.py  download_multi_thread.py  miss_keyframe.txt  miss_video.txt
approach/: __init__.py  isoh.py  itq.py  lsh.py
data/: __init__.py  dataset.py
demos/: bfs_demo.py  cnnv_demo.py  isoh_demo.py  itq_demo.py  lsh_demo.py
fivr/:  README.md
modules/: vgg.py
utils/: args.py  calc_euclidean_search.py  calc_hamming_ranking.py  logger.py  util.py
videoprocess/: __init__.py  cnnlv_keyframe_sampling.py  cnnv_clustering.py  cnnv_feature_aggregation.py  deepfeatures_extraction.py  frame_check.py  frame_extraction.py  video_durations.py  videofeatures_extraction.py
